风控参数修改

--- a/TXHConductFinancialTransactions/TXHConductFinancialTransactionsLastFile/TXHConductFinancialTransactions/Classes/Views/HomeAssetTableViewCell.xib
+++ b/TXHConductFinancialTransactions/TXHConductFinancialTransactionsLastFile/TXHConductFinancialTransactions/Classes/Views/HomeAssetTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,7 +17,6 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总资产（元）" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="txF-I4-TXZ">
                         <rect key="frame" x="0.0" y="23" width="320" height="21"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="LFW-Hw-8Vz"/>
                         </constraints>
@@ -27,7 +26,6 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wUm-vL-n6H">
                         <rect key="frame" x="0.0" y="49" width="320" height="54"/>
-                        <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="45"/>
                         <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -35,16 +33,14 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P3u-w5-UkI">
                         <rect key="frame" x="0.0" y="123" width="320" height="48"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="昨日年化收益率     8.00%" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8M3-z1-Sm2">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="当前年化收益率     8.00%" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8M3-z1-Sm2">
                                 <rect key="frame" x="100" y="0.0" width="220" height="20"/>
-                                <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TRU-71-vuq">
                                 <rect key="frame" x="0.0" y="0.0" width="75" height="20"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="fSO-Jd-5tC"/>
                                     <constraint firstAttribute="width" constant="75" id="h96-HJ-sNg"/>
@@ -52,13 +48,11 @@
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_yesterday_rate.png" translatesAutoresizingMaskIntoConstraints="NO" id="imM-CL-u5Z">
                                 <rect key="frame" x="75" y="0.0" width="25" height="20"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="25" id="cfj-WE-8rw"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="imM-CL-u5Z" firstAttribute="top" secondItem="TRU-71-vuq" secondAttribute="top" id="3Bp-d7-9WK"/>
@@ -73,7 +67,6 @@
                         </constraints>
                     </view>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="wUm-vL-n6H" firstAttribute="trailing" secondItem="txF-I4-TXZ" secondAttribute="trailing" id="3er-4h-xP9"/>
                     <constraint firstItem="wUm-vL-n6H" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="7Hl-hN-rWg"/>
@@ -88,7 +81,6 @@
                     <constraint firstItem="P3u-w5-UkI" firstAttribute="top" secondItem="wUm-vL-n6H" secondAttribute="bottom" constant="20" id="vPr-SE-Png"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <connections>
                 <outlet property="leftSpaceConstraints" destination="h96-HJ-sNg" id="YXe-0n-lwJ"/>
                 <outlet property="middleSpaceConstraints" destination="vPr-SE-Png" id="Bkb-YM-ma3"/>
