--- a/TXHConductFinancialTransactions/TXHConductFinancialTransactionsLastFile/TXHConductFinancialTransactions/Classes/Views/CuponTableViewCell.xib
+++ b/TXHConductFinancialTransactions/TXHConductFinancialTransactionsLastFile/TXHConductFinancialTransactions/Classes/Views/CuponTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,27 +17,23 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="list_green.png" translatesAutoresizingMaskIntoConstraints="NO" id="mjU-qX-IUL">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
-                        <animations/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7zy-kI-FGZ">
                         <rect key="frame" x="0.0" y="-2" width="226" height="121"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="加息劵＋5.0%" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVc-3m-wtV">
                                 <rect key="frame" x="0.0" y="40" width="226" height="39"/>
-                                <animations/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="32"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="领取日期：2015-12-31" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t7L-lP-HXB">
                                 <rect key="frame" x="0.0" y="74" width="226" height="20"/>
-                                <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12.5"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="uVc-3m-wtV" secondAttribute="trailing" id="9CA-9R-bkm"/>
@@ -64,14 +60,12 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="剩余天数：0天" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vni-bQ-fOo">
                                 <rect key="frame" x="0.0" y="61" width="89" height="21"/>
-                                <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="立即领取" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="phW-qT-iGu">
                                 <rect key="frame" x="0.0" y="40" width="89" height="21"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="rlH-uz-zxy"/>
                                 </constraints>
@@ -80,7 +74,6 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Vni-bQ-fOo" firstAttribute="top" secondItem="phW-qT-iGu" secondAttribute="bottom" id="JCV-NF-2FH"/>
@@ -93,7 +86,6 @@
                         </constraints>
                     </view>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="J1v-fg-8lK" firstAttribute="trailing" secondItem="mjU-qX-IUL" secondAttribute="trailing" id="4yR-hR-3Bp"/>
                     <constraint firstItem="J1v-fg-8lK" firstAttribute="leading" secondItem="7zy-kI-FGZ" secondAttribute="trailing" constant="5" id="C3t-fh-vFb"/>
@@ -110,7 +102,6 @@
                     <constraint firstItem="mjU-qX-IUL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="xYi-Y7-XcQ"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <connections>
                 <outlet property="backGroundImageView" destination="mjU-qX-IUL" id="1EN-8S-hqM"/>
                 <outlet property="contentLabel" destination="uVc-3m-wtV" id="zcP-ut-D8E"/>
